<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--    region naming-->
        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/doctorName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/doctorName" />

        <TextView
            android:id="@+id/doctorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name" />
        <!--    endregion naming-->

        <!--    region doctorAddress-->
        <TextView
            android:id="@+id/addressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/address"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/doctorAddress"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toTopOf="@+id/doctorAddress" />

        <TextView
            android:id="@+id/doctorAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorName"
            tools:text="@string/address" />
        <!--    endregion doctorAddress-->

        <!--    region doctorPhone-->
        <TextView
            android:id="@+id/phoneTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/phone"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/doctorPhone"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toTopOf="@+id/doctorPhone" />

        <TextView
            android:id="@+id/doctorPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorAddress"
            tools:text="@string/phone" />
        <!--    endregion doctorPhone-->

        <!--    region doctorEmail-->
        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/doctorEmail"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toTopOf="@+id/doctorEmail" />

        <TextView
            android:id="@+id/doctorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorPhone"
            tools:text="@string/email" />
        <!--    endregion doctorEmail-->

        <!--    region doctorWebsite-->
        <TextView
            android:id="@+id/doctorWebsiteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/website"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/doctorWebsite"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toTopOf="@+id/doctorWebsite" />

        <TextView
            android:id="@+id/doctorWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctorEmail"
            tools:text="@string/website" />
        <!--    endregion doctorEmail-->

        <!--    region appointmentTime-->
        <TextView
            android:id="@+id/appointmentTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:text="@string/appointment_time"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nameTitle"
            app:layout_constraintTop_toBottomOf="@+id/doctorWebsite" />

        <LinearLayout
            android:id="@+id/appointmentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/appointmentTimeTitle"
            app:layout_constraintTop_toBottomOf="@+id/appointmentTimeTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/appointment_time" />
        <!--    endregion appointmentTime-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>